added feature section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,7 @@ body {
     margin: auto;
 }
 
-.title {
+.header-title {
     color: #272727;
     font-size: 80px;
     font-weight: 900;
@@ -36,7 +36,7 @@ body {
     margin-bottom: 30px;
 }
 
-.description {
+.header-description {
     width: 630px;
     text-align: left;
     color: rgba(39, 39, 39, 0.60);
@@ -55,4 +55,80 @@ body {
     border: none;
     padding: 20px 43px;
     margin-top: 30px;
+}
+
+/* feature flower section */
+
+.feature-title {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 900;
+    margin-top: 150px;
+    margin-bottom: 0;
+}
+
+.feature-description {
+    color: rgba(39, 39, 39, 0.60);
+
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 24px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+/* .flower-container {
+    display: flex;
+    align-items: center;
+} */
+
+.feature-container {
+    display: flex;
+    gap: 25px;
+    align-items: center;
+    width: 80%;
+    margin: auto;
+    /* background-color: beige; */
+    text-align: center;
+}
+
+.feature-container .flower1,
+.flower2,
+.flower3 {
+    border-radius: 300px 300px 0px 0px;
+    width: 350px;
+    height: 400px
+}
+
+.flower1 {
+    background: rgba(167, 33, 98, 0.15);
+}
+
+.flower2 {
+    background: rgba(5, 151, 160, 0.15);
+
+}
+
+.flower3 {
+    background: rgba(71, 125, 17, 0.15);
+
+}
+
+.feature-container img {
+    width: 200px;
+    height: 300px;
+    margin-top: 28%;
+}
+
+.flower-description {
+    color: #272727; 
+    font-size: 20px;
+    font-weight: 700;
+    text-decoration-line: underline;
+    margin-top: 30px;
+}
+
+.item1 {
+    margin-left: 60px;
 }
