--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,7 +70,6 @@ body {
 
 .feature-description {
     color: rgba(39, 39, 39, 0.60);
-
     font-size: 18px;
     font-weight: 400;
     margin-top: 24px;
@@ -78,19 +77,17 @@ body {
     text-align: center;
 }
 
-/* .flower-container {
-    display: flex;
-    align-items: center;
-} */
-
 .feature-container {
     display: flex;
     gap: 25px;
     align-items: center;
     width: 80%;
     margin: auto;
-    /* background-color: beige; */
     text-align: center;
+}
+
+.item1 {
+    margin-left: 60px;
 }
 
 .feature-container .flower1,
@@ -122,13 +119,35 @@ body {
 }
 
 .flower-description {
-    color: #272727; 
+    color: #272727;
     font-size: 20px;
     font-weight: 700;
     text-decoration-line: underline;
     margin-top: 30px;
 }
 
-.item1 {
-    margin-left: 60px;
+/* Hot deal section */
+
+.hot-deals {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05);
+    /* gap: -100px; */
+    text-align: center;
+    margin-top: 130px;
 }
+
+.deal-right >img {
+    margin-top: 100px;
+}
+
+.deal-right{
+    margin-right    : 100px;
+    margin-bottom: 50px;
+}
+.deal-left{
+    margin-left: 100px;
+}
+
