--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,15 +46,16 @@ body {
 }
 
 .btn {
-    text-align: left;
+    text-align: center;
     color: #FFF;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 700;
     border-radius: 8px;
     background: #E55473;
     border: none;
-    padding: 20px 43px;
     margin-top: 30px;
+    width: 120px;
+    height: 50px;
 }
 
 /* feature flower section */
@@ -153,17 +154,54 @@ body {
 }
 
 /* instagram section */
+
 .insta-img {
     display: flex;
     align-items: center;
     gap: 24px;
     justify-content: space-around;
-    width: 60%;
+    width: 70%;
     margin: auto;
 
 }
 
-.imag > img {
+.imag>img {
     width: 250px;
     height: 300px;
 }
+
+/* latest section */
+
+.latest {
+    display: flex;
+    align-items: center;
+    margin-top: 128px;
+}
+
+.latest-container {
+    border-radius: 8px;
+    width: 70%;
+    height: 400px;
+    margin: auto;
+    background-image: url('asset/Rectangle 9.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.latest-info{
+    margin-top: -80px;
+}
+.latest-contact {
+    text-align: center;
+    margin-top: -50px;
+}
+
+.email {
+    border-radius: 8px;
+    background: #FFF;
+    width: 400px;
+    height: 50px;
+    margin-right: 10px;
+    border: none;
+}
+
