--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 /* header section styles */
-.header {
+header {
     display: flex;
     justify-content: space-around;
     background: rgba(229, 84, 115, 0.10);
@@ -188,9 +188,10 @@ body {
     background-size: contain;
 }
 
-.latest-info{
+.latest-info {
     margin-top: -80px;
 }
+
 .latest-contact {
     text-align: center;
     margin-top: -50px;
@@ -205,3 +206,41 @@ body {
     border: none;
 }
 
+
+/* footer section */
+
+footer {
+    background-color: #111010;
+    height: 450px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer-container{
+    text-align: center;
+}
+
+.footer-title {
+    color: white;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 900;
+    margin-top: 150px;
+    margin-bottom: 0;
+}
+
+.footer-description {
+    color: rgba(255, 255, 255, 0.90);
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 24px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.footer-copyright {
+    color: rgba(255, 255, 255, 0.40);
+    text-align: center;
+    margin-top: -24px;
+    text-align: center;
+}
